--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,4 @@
-/* screen.css - Version pour écran */
+/* screen.css - Version pour ï¿½cran */
 /* ======================================== */
 /*                 Variable                 */
 /* ======================================== */
@@ -123,15 +123,15 @@ h2 {
 }
 
 .hero-history {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/hero-history.jpeg');
+    background-image: url('../img/hero-history.jpeg');
 }
 
 .hero-training {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/hero-training.jpg');
+    background-image: url('../img/hero-training.jpg');
 }
 
 .hero-benefit {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/hero-benefit.jpg');
+    background-image: url('../img/hero-benefit.jpg');
 }
 
 .hero-content {
