--- a/css/screen.css
+++ b/css/screen.css
@@ -275,6 +275,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 5% 0;
 }
 
 .hero-history {
